--- a/EnviromentalApp/Views/AllNotesPage.xaml
+++ b/EnviromentalApp/Views/AllNotesPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="EnviromentalApp.Views.AllSensorsPage"
-             Title="Your Sensors">
+             x:Class="EnviromentalApp.Views.AllNotesPage"
+             Title="Your Notes">
     <!-- Add an item to the toolbar -->
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Clicked="Add_Clicked" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
