--- a/EnviromentalApp/Views/SensorPage.xaml
+++ b/EnviromentalApp/Views/SensorPage.xaml
@@ -2,28 +2,22 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:EnviromentalApp.ViewModels"
-             x:Class="EnviromentalApp.Views.SensorPage"
-             Title="Sensors">
+             x:Class="EnviromentalApp.Views.NotePage"
+             Title="Note">
+    <VerticalStackLayout Spacing="10" Margin="5">
+        <Editor x:Name="TextEditor"
+                Placeholder="Enter your note"
+                Text="{Binding Text}"
+                HeightRequest="100" />
     
-    <VerticalStackLayout Padding="10" Spacing="10">
-        
-        <CollectionView x:Name="sensorCollection"
-                        ItemsSource="{Binding Sensors}"
-                        SelectionMode="None">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Frame BorderColor="LightGray" Padding="10" CornerRadius="8">
-                        <VerticalStackLayout>
-                            <Label Text="{Binding Type}" FontAttributes="Bold"/>
-                            <Label Text="{Binding Position}" FontSize="12"/>
-                            <Label Text="{Binding Status}" FontSize="12" TextColor="Gray"/>
-                        </VerticalStackLayout>
-                    </Frame>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-
-        <Button Text="Refresh Sensors"
-                Command="{Binding RefreshCommand}" />
+        <Grid ColumnDefinitions="*,*" ColumnSpacing="4">
+            <Button Text="Save"
+                    Command="{Binding SaveCommand}"/>
+    
+            <Button Grid.Column="1"
+                    Text="Delete"
+                    Command="{Binding DeleteCommand}"/>
+    
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
