--- a/EnviromentalApp/AppShell.xaml
+++ b/EnviromentalApp/AppShell.xaml
@@ -7,6 +7,12 @@
     Shell.FlyoutBehavior="Disabled">
 
     <TabBar>
+
+        <ShellContent
+            Title="Home"
+            ContentTemplate="{DataTemplate views:Homepage}"
+            Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
+
         <ShellContent
             Title="Notes"
             ContentTemplate="{DataTemplate views:SensorPage}"
