--- a/EnviromentalApp/AppShell.xaml
+++ b/EnviromentalApp/AppShell.xaml
@@ -8,8 +8,8 @@
 
     <TabBar>
         <ShellContent
-            Title="Notes"
-            ContentTemplate="{DataTemplate views:SensorPage}"
+            Title="Sensor Status"
+            ContentTemplate="{DataTemplate views:AllSensorsPage}"
             Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
 
         <ShellContent
