--- a/EnviromentalApp/Views/AllSensorsPage.xaml
+++ b/EnviromentalApp/Views/AllSensorsPage.xaml
@@ -26,8 +26,9 @@
         <CollectionView.ItemTemplate>
             <DataTemplate>
                 <StackLayout>
+                    <Label Text="{Binding sensorId}" FontSize="22"/>
                     <Label Text="{Binding Type}" FontSize="22"/>
-                    <Label Text="{Binding sensorId}" FontSize="14" TextColor="Silver"/>
+                    <Label Text="{Binding Status}" FontSize="14" TextColor="Silver"/>
                 </StackLayout>
             </DataTemplate>
         </CollectionView.ItemTemplate>
