--- a/EnviromentalApp/Views/SensorPage.xaml
+++ b/EnviromentalApp/Views/SensorPage.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:EnviromentalApp.ViewModels"
-             x:Class="EnviromentalApp.Views.NotePage"
+             x:Class="EnviromentalApp.Views.SensorPage"
              Title="Note">
     <VerticalStackLayout Spacing="10" Margin="5">
         <Editor x:Name="TextEditor"
                 Placeholder="Enter your note"
-                Text="{Binding Text}"
+                Text="{Binding Type}"
                 HeightRequest="100" />
     
         <Grid ColumnDefinitions="*,*" ColumnSpacing="4">
