--- a/EnviromentalApp/Views/AllSensorsPage.xaml
+++ b/EnviromentalApp/Views/AllSensorsPage.xaml
@@ -26,7 +26,7 @@
         <CollectionView.ItemTemplate>
             <DataTemplate>
                 <StackLayout>
-                    <Label Text="{Binding sensorId}" FontSize="22"/>
+                    <Label Text="{Binding Name}" FontSize="22"/>
                     <Label Text="{Binding Type}" FontSize="22"/>
                     <Label Text="{Binding Status}" FontSize="14" TextColor="Silver"/>
                 </StackLayout>
