Sensor account page added

--- a/EnviromentalApp/AppShell.xaml
+++ b/EnviromentalApp/AppShell.xaml
@@ -19,6 +19,11 @@
             Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
 
         <ShellContent
+            Title="Sensor Accounts"
+            ContentTemplate="{DataTemplate views:AllSensorAccountsPage}"
+            Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
+
+        <ShellContent
             Title="Users"
             ContentTemplate="{DataTemplate views:AllUsersPage}"
             Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
