Added new page to view histrical averages for weather conditions

--- a/EnviromentalApp/AppShell.xaml
+++ b/EnviromentalApp/AppShell.xaml
@@ -35,7 +35,7 @@
 
         <ShellContent
             Title="About"
-            ContentTemplate="{DataTemplate views:AboutPage}"
+            ContentTemplate="{DataTemplate views:AllWeatherMeasurementsPage}"
             Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}" />
     </TabBar>
 
