--- a/EnviromentalApp/AppShell.xaml
+++ b/EnviromentalApp/AppShell.xaml
@@ -37,6 +37,11 @@
             Title="About"
             ContentTemplate="{DataTemplate views:AllWeatherMeasurementsPage}"
             Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}" />
+
+        <ShellContent
+            Title="Air Quality"
+            ContentTemplate="{DataTemplate views:AllAirQualityMeasurementsPage}"
+            Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}" />
     </TabBar>
 
 </Shell>
