--- a/EnviromentalApp/Views/AllUsersPage.xaml
+++ b/EnviromentalApp/Views/AllUsersPage.xaml
@@ -7,7 +7,7 @@
     
     <!-- Add an item to the toolbar -->
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Command="{Binding NewCommand}" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
+        <ToolbarItem Text="Add User" Command="{Binding NewCommand}" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
     </ContentPage.ToolbarItems>
     
     <!-- Display notes in a list -->
