Fixed user interface for user, sensor and ticket screens

--- a/EnviromentalApp/Views/ManageUserPage.xaml
+++ b/EnviromentalApp/Views/ManageUserPage.xaml
@@ -27,6 +27,19 @@
                     WidthRequest="300" />
         </HorizontalStackLayout>
 
+        <HorizontalStackLayout Spacing="10">
+            <Label Text="Password:" 
+                   FontAttributes="Bold"
+                   VerticalOptions="Center"/>
+
+            <!-- Display status -->
+            <Editor x:Name="PasswordEditor"
+                    Placeholder="Enter password"
+                    Text="{Binding Password}"
+                    HeightRequest="40"
+                    WidthRequest="300" />
+        </HorizontalStackLayout>
+
        <HorizontalStackLayout Spacing="10">
             <Label Text="Role:" 
                    FontAttributes="Bold"
